--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 dependencies {
     compile localGroovy()
     compile gradleApi()
+    testCompile 'org.spockframework:spock-core:0.6-groovy-1.8'
 }
 
 jar {
@@ -108,5 +109,15 @@ bintray {
         repo = 'gradle-plugins'
         name = 'gradle-vagrant-plugin'
         licenses = ['Apache-2.0']
+    }
+}
+
+apply plugin: 'maven'
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "file://$projectDir/../repo")
+        }
     }
 }
