--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 
     dependencies {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
+        classpath 'org.ajoberstar:gradle-git:0.9.0'
     }
 }
 
@@ -12,6 +13,7 @@ apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'maven-publish'
 apply plugin: 'bintray'
+apply plugin: 'github-pages'
 
 group = 'org.gradle.api.plugins'
 version = '0.7'
@@ -109,5 +111,18 @@ bintray {
         repo = 'gradle-plugins'
         name = 'gradle-vagrant-plugin'
         licenses = ['Apache-2.0']
+    }
+}
+
+githubPages {
+    repoUri = 'git@github.com:bmuschko/gradle-vagrant-plugin.git'
+
+    pages {
+        from(javadoc.outputs.files) {
+            into 'docs/javadoc'
+        }
+        from(groovydoc.outputs.files) {
+            into 'docs/groovydoc'
+        }
     }
 }
