--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.6'
         classpath 'org.ajoberstar:gradle-git:0.9.0'
     }
 }
@@ -12,11 +12,11 @@ buildscript {
 apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'maven-publish'
-apply plugin: 'bintray'
+apply plugin: 'com.jfrog.bintray'
 apply plugin: 'github-pages'
 
-group = 'org.gradle.api.plugins'
-version = '0.7'
+group = 'com.bmuschko'
+version = '2.0'
 
 repositories {
     mavenCentral()
@@ -25,7 +25,9 @@ repositories {
 dependencies {
     compile localGroovy()
     compile gradleApi()
-    testCompile 'org.spockframework:spock-core:0.6-groovy-1.8'
+    testCompile('org.spockframework:spock-core:0.7-groovy-2.0') {
+        exclude group: 'org.codehaus.groovy'
+    }
 }
 
 jar {
@@ -99,7 +101,7 @@ publishing {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.11'
+    gradleVersion = '2.1'
 }
 
 bintray {
@@ -111,6 +113,29 @@ bintray {
         repo = 'gradle-plugins'
         name = 'gradle-vagrant-plugin'
         licenses = ['Apache-2.0']
+    }
+
+    pkg {
+        repo = 'gradle-plugins'
+        name = 'com.bmuschko:gradle-vagrant-plugin'
+        desc = 'Gradle plugin for managing Vagrant boxes.'
+        websiteUrl = "https://github.com/bmuschko/${project.name}"
+        issueTrackerUrl = "https://github.com/bmuschko/${project.name}/issues"
+        vcsUrl = "https://github.com/bmuschko/${project.name}.git"
+        licenses = ['Apache-2.0']
+        labels = ['gradle', 'vagrant', 'vm', 'virtual', 'machine', 'provisioning', 'infrastructure']
+        publicDownloadNumbers = true
+
+        version {
+            vcsTag = "v$project.version"
+            attributes = ['gradle-plugin': ["com.bmuschko.vagrant:${project.group}:${project.name}",
+                                            "com.bmuschko.vagrant-base:${project.group}:${project.name}"]]
+
+            gpg {
+                sign = true
+                passphrase = project.hasProperty('gpgPassphrase') ? project.getProperty('gpgPassphrase') : null
+            }
+        }
     }
 }
 
