--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        jcenter()
+        gradlePluginPortal()
     }
 
     dependencies {
@@ -18,7 +18,7 @@ group = 'com.bmuschko'
 version = '2.1'
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
