--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,11 @@ publishing {
                 root.appendNode('description', 'Gradle plugin for managing Vagrant boxes.')
                 root.appendNode('inceptionYear', '2013')
 
+                def scm = root.appendNode('scm')
+                scm.appendNode('url', 'https://github.com/bmuschko/gradle-vagrant-plugin')
+                scm.appendNode('connection', 'scm:https://bmuschko@github.com/bmuschko/gradle-vagrant-plugin.git')
+                scm.appendNode('developerConnection', 'scm:git://github.com/bmuschko/gradle-vagrant-plugin.git')
+
                 def license = root.appendNode('licenses').appendNode('license')
                 license.appendNode('name', 'The Apache Software License, Version 2.0')
                 license.appendNode('url', 'http://www.apache.org/licenses/LICENSE-2.0.txt')
